ft_containers-unit-test/logs.txt
../stack_tests/constructor.cpp:32:2: error: no template named 'Vector' in namespace 'ft'; did you mean 'vector'?
        _vector<int> deque;
        ^~~~~~~
        vector
../stack_tests/../system/../../config.hpp:20:20: note: expanded from macro '_vector'
#define _vector                         ft::Vector
                                        ^~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/vector:470:28: note: 'vector' declared here
class _LIBCPP_TEMPLATE_VIS vector
                           ^
1 error generated.
